# screeps-rust-bot

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
js_src/: main.js
js_tools/: deploy.js
src/: core.rs  lib.rs  memory.rs  roles.rs
src/modules/: global.rs
src/modules/global/: clear_memory.rs  role_stats.rs
src/utils/: common.rs
