[package]
name = "screeps-rust-bot"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
fern = "0.7.1"
js-sys = "0.3.81"
log = "0.4.28"
screeps-game-api = "0.23.1"
wasm-bindgen = "0.2.104"
web-sys = {version = "0.3.81", features = ["console"]}

[dev-dependencies]
wasm-bindgen-test = "0.3.54"

[profile.release]
panic = "abort"
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.release]
# See wasm-opt for full available options; handy examples:
# -O4 - optimize aggressively for performance
# -Oz - optimize aggressively for code size
# -g - leave debug info in place, allowing for more descriptive stack traces on panic
# --signext-lowering - removes opcodes that the screeps servers can't load (see 
# https://github.com/rustyscreeps/screeps-game-api/issues/391)
wasm-opt = ["-O4", "--signext-lowering"]

[features]
default = []

sim = ["screeps-game-api/sim"]
mmo = ["screeps-game-api/mmo"]
